src/test/ui/feature-gates/feature-gate-adt_const_params.rs
struct Foo<const NAME: &'static str>; //~ ERROR `&'static str` is forbidden
fn main() {}
